--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,9 +3,8 @@
 
     <string name="app_name">verdade-ou-desafio-android</string>
     <string name="action_settings">Settings</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section1">Pessoas</string>
+    <string name="title_section2">Verdade ou Desafio</string>
     <string name="title_activity_truth_or_dare">TruthOrDareActivity</string>
     <string name="title_activity_aa">AAActivity</string>
 
